crates/pamoja-ffi/include/pamoja.h

// Where a fix sits relative to a geofence, including the moment it crosses.
typedef enum {
  // The fix is inside the fence and was inside before, or is the first fix inside.
  PamojaBoundary_Inside = 0,
  // The fix is outside the fence and was outside before, or is the first fix outside.
  PamojaBoundary_Outside = 1,
  // The fix just crossed from inside to outside: the moment to raise a breach alert.
  PamojaBoundary_Exited = 2,
  // The fix just crossed from outside back inside.
  PamojaBoundary_Entered = 3,
} PamojaBoundary;
// An opaque handle to a raw-to-units calibration.
typedef struct PamojaCalibration PamojaCalibration;
// An opaque handle to a circular geofence.
typedef struct PamojaGeofence PamojaGeofence;
// An opaque handle to a step-change detector.
typedef struct PamojaSurge PamojaSurge;
// A latitude and longitude in degrees.
typedef struct {
  // Degrees north of the equator, negative for south.
  double latitude;
  // Degrees east of the prime meridian, negative for west.
  double longitude;
} PamojaCoordinate;
// Releases a surge detector handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `surge` must be a handle from a surge constructor that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_surge_free(PamojaSurge *surge);
// Releases a calibration handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `calibration` must be a handle from a calibration constructor that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_calibration_free(PamojaCalibration *calibration);
// Releases a geofence handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `geofence` must be a handle from [`pamoja_geofence_new`] that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_geofence_free(PamojaGeofence *geofence);
// Feeds a value to a surge detector.
//
// # Returns
//
// `true` if the change since the previous reading went past the limit in the
// watched direction, having written its size, as a positive number, to `out_delta`;
// `false` otherwise, on the first reading, or if `surge` is null.
//
// # Safety
//
// `surge` must be a live handle from a surge constructor, or null, and
// `out_delta` must point to a writable `float` or be null.
bool pamoja_surge_update(PamojaSurge *surge, float value, float *out_delta);
// Creates a calibration applying `raw * scale + offset`.
//
// # Returns
//
// A handle the caller must release with [`pamoja_calibration_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaCalibration *pamoja_calibration_linear(float scale, float offset);
// Creates a calibration fitted through two known reference points.
//
// # Returns
//
// A handle the caller must release with [`pamoja_calibration_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaCalibration *pamoja_calibration_two_point(float raw_low,
                                                float value_low,
                                                float raw_high,
                                                float value_high);
// Converts a raw reading into calibrated units.
//
// # Returns
//
// The calibrated value, or NaN if `calibration` is null.
//
// # Safety
//
// `calibration` must be a live handle from a calibration constructor, or null.
float pamoja_calibration_apply(const PamojaCalibration *calibration, float raw);
// Creates a circular geofence of `radius_m` around `center`.
//
// # Returns
//
// A handle the caller must release with [`pamoja_geofence_free`].
//
// # Safety
//
// The returned handle must be freed exactly once.
PamojaGeofence *pamoja_geofence_new(PamojaCoordinate center, double radius_m);
// Feeds a fix to a geofence and reports where it sits, including a crossing.
//
// # Returns
//
// The boundary state for this fix, or [`PamojaBoundary::Outside`] if `geofence`
// is null.
//
// # Safety
//
// `geofence` must be a live handle from [`pamoja_geofence_new`], or null.
PamojaBoundary pamoja_geofence_update(PamojaGeofence *geofence, PamojaCoordinate point);
// Reports whether a fix lies inside a geofence, without recording a crossing.
//
// # Returns
//
// `true` if the fix is inside, or `false` if it is outside or `geofence` is null.
//
// # Safety
//
// `geofence` must be a live handle from [`pamoja_geofence_new`], or null.
bool pamoja_geofence_contains(const PamojaGeofence *geofence, PamojaCoordinate point);
// Returns the great-circle distance between two coordinates, in meters.
double pamoja_coordinate_distance_to(PamojaCoordinate from, PamojaCoordinate to);
// Returns the initial bearing from one coordinate to another, in degrees.
double pamoja_coordinate_bearing_to(PamojaCoordinate from, PamojaCoordinate to);
// Holds a reading at `center` while it stays within `width` either side, so small
// wiggle around a setpoint does not act.
//
// # Returns
//
// `center` while `value` is within `width` of it, and otherwise `value` unchanged.
float pamoja_kit_deadband(float value, float center, float width);