bindings/dotnet/src/Pamoja.Core/Interop/NativeMethods.Capabilities.cs


    /// <summary>Feeds a value to a surge detector, reporting a qualifying step.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_surge_update(IntPtr surge, float value, out float outDelta);

    /// <summary>Releases a surge handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_surge_free(IntPtr surge);

    /// <summary>Creates a linear calibration.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_calibration_linear(float scale, float offset);

    /// <summary>Creates a calibration fitted through two reference points.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_calibration_two_point(
        float rawLow,
        float valueLow,
        float rawHigh,
        float valueHigh);

    /// <summary>Converts a raw reading into calibrated units.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_calibration_apply(IntPtr calibration, float raw);

    /// <summary>Releases a calibration handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_calibration_free(IntPtr calibration);

    /// <summary>Creates a circular geofence.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_geofence_new(PamojaCoordinate center, double radiusM);

    /// <summary>Feeds a fix to a geofence and reports where it sits.</summary>
    [LibraryImport(Library)]
    public static partial PamojaBoundary pamoja_geofence_update(
        IntPtr geofence,
        PamojaCoordinate point);

    /// <summary>Reports whether a fix lies inside a geofence.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_geofence_contains(IntPtr geofence, PamojaCoordinate point);

    /// <summary>Releases a geofence handle. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_geofence_free(IntPtr geofence);

    /// <summary>Returns the great-circle distance between two coordinates, in metres.</summary>
    [LibraryImport(Library)]
    public static partial double pamoja_coordinate_distance_to(
        PamojaCoordinate from,
        PamojaCoordinate to);

    /// <summary>Returns the initial bearing between two coordinates, in degrees.</summary>
    [LibraryImport(Library)]
    public static partial double pamoja_coordinate_bearing_to(
        PamojaCoordinate from,
        PamojaCoordinate to);

    /// <summary>Suppresses movement within a band around a centre value.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_kit_deadband(float value, float center, float width);
}
